--- a/Index.html
+++ b/Index.html
@@ -142,48 +142,56 @@
                       </div>
                   </div>
                    <!--Contenido 2-->
+                   <section class="skills" id="skills">
                   <div id="tabs-2" class="tab-pane">
-                  
-                    <p>HTML</p>
+
+                    <div class="skill">
+                    <span>HTML</span>
                     <div class="progress-stacked m-5">
                      <div class="progress" role="progressbar" aria-label="Info striped example" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 99%">
                    <div class="progress-bar progress-bar-striped bg-info"></div>
                    </div>
                       </div>
-                    <p>CSS</p>
+                    </div>
+                    <div class="skill">
+                    <span>CSS</span>
                       <div class="progress-stacked m-5">
                         <div class="progress" role="progressbar" aria-label="Warning striped example" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 89%">
                       <div class="progress-bar progress-bar-striped bg-warning"></div>
                       </div>
                          </div>
-                    <p>JAVASCRIPT</p>
+                        </div>
+                        <div class="skill">
+                    <span>JAVASCRIPT</span>
                       <div class="progress-stacked m-5">
                            <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 79%">
                       <div class="progress-bar progress-bar-striped bg-success"></div>
                       </div>
                             </div>
                       </div>
+                    </div>
+                    </section>
                       <!--Contenido 3-->
                   <div id="tabs-3" class="tab-pane">
                     <h2 class="m-5"> Contacta conmigo</h2>
                     <form>
                       <div>
-                          <label class="form-label lead" for="name">Nombre</label>
-                          <input class="form-control" id="name" type="text" placeholder="Escribe tu Nombre">
+                          <label class="form-label lead" for="name" >Nombre</label>
+                          <input class="form-control" id="name" type="text" placeholder="Escribe tu Nombre" required>
                       </div>
                       <div>
-                        <label class="form-label lead" for="name">Email</label>
-                        <input class="form-control" id="name" type="email" placeholder="Escribe tu Email">
+                        <label class="form-label lead" for="name" >Email</label>
+                        <input class="form-control" id="email" type="email" placeholder="Escribe tu Email" required> 
                     </div>
                       <div>
-                        <label class="form-label lead"for="asunto">Asunto</label>
-                        <input class="form-control" id="asunto"type="text" placeholder= "Escribre tu Asunto">
+                        <label class="form-label lead"for="asunto" >Asunto</label>
+                        <input class="form-control" id="asunto"type="text" placeholder= "Escribre tu Asunto" required>
                     </div>
                     <div>
-                      <label class="form-label lead" for="mensaje">Mensaje</label>
-                      <textarea class="form-control" placeholder="Deja tu comentario aqui..." id="floatingTextarea2" style="height: 100px"></textarea>
+                      <label class="form-label lead" for="mensaje" >Mensaje</label>
+                      <textarea class="form-control" placeholder="Deja tu comentario aqui..." id="floatingTextarea2" style="height: 100px" required></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary m-5" >Enviar</button>
+                  <button type="submit" class="btn btn-primary m-5" id="warnings" >Enviar</button>
                     </form>
 
                   </div>
@@ -239,5 +247,6 @@
       </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src=" js/script.js"></script>
 </body>
 </html>
