--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
               <div class="contenido-img">
                 <img class="img-1 m-5" src="https://cdn-images.livecareer.es/pages/foto_cv_lc_es_4.jpg" alt= "Titular del CV">
               </div>
-              <h1 class="text-light" >PAUL DAVIDSON</h1>
+              <h1 class="text-light" >GIAN FRANCO MONTERO AVALOS</h1>
               <h2 class="text-light">Ingeniero de Sofware - Experto UI/UX</h2>
               <div class="redes">
                 <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="20" fill="currentColor" viewBox="0 0 16 16">
